ghidra_scripts/stabs/StabsParser.java
// Generated from c:/Users/tiagocost/ghidra_scripts/stabs/StabsParser.g4 by ANTLR 4.13.1
package stabs;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class StabsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UppercaseA=1, UppercaseB=2, UppercaseC=3, UppercaseD=4, UppercaseE=5, 
		UppercaseF=6, UppercaseG=7, UppercaseH=8, UppercaseI=9, UppercaseJ=10, 
		UppercaseK=11, UppercaseL=12, UppercaseM=13, UppercaseN=14, UppercaseO=15, 
		UppercaseP=16, UppercaseQ=17, UppercaseR=18, UppercaseS=19, UppercaseT=20, 
		UppercaseU=21, UppercaseV=22, UppercaseW=23, UppercaseX=24, UppercaseY=25, 
		UppercaseZ=26, LowercaseA=27, LowercaseB=28, LowercaseC=29, LowercaseD=30, 
		LowercaseE=31, LowercaseF=32, LowercaseG=33, LowercaseH=34, LowercaseI=35, 
		LowercaseJ=36, LowercaseK=37, LowercaseL=38, LowercaseM=39, LowercaseN=40, 
		LowercaseO=41, LowercaseP=42, LowercaseQ=43, LowercaseR=44, LowercaseS=45, 
		LowercaseT=46, LowercaseU=47, LowercaseV=48, LowercaseW=49, LowercaseX=50, 
		LowercaseY=51, LowercaseZ=52, Number0=53, Number1=54, Number2=55, Number3=56, 
		Number4=57, Number5=58, Number6=59, Number7=60, Number8=61, Number9=62, 
		Ampersand=63, AngleBracketLeft=64, AngleBracketRight=65, Asterisk=66, 
		At=67, Colon=68, Comma=69, Dot=70, Equals=71, Exclamation=72, Hash=73, 
		Minus=74, ParenthesisLeft=75, ParenthesisRight=76, Percent=77, Plus=78, 
		Question=79, Semicolon=80, Slash=81, Space=82, Tilde=83, Underscore=84;
	public static final int
		RULE_symbol = 0, RULE_symbolType = 1, RULE_symbolTypeReferenceParameter = 2, 
		RULE_symbolTypeGlobalFunction = 3, RULE_symbolTypeLocalFunction = 4, RULE_symbolTypeGlobalVariable = 5, 
		RULE_symbolTypeParameterOrFunctionPrototype = 6, RULE_symbolTypeStackParameter = 7, 
		RULE_symbolTypeRegisterVariable = 8, RULE_symbolTypeStaticFileVariable = 9, 
		RULE_symbolTypeTaggedTypedef = 10, RULE_symbolTypeTagged = 11, RULE_symbolTypeTypedef = 12, 
		RULE_symbolTypeStaticLocalVariable = 13, RULE_type = 14, RULE_typeID = 15, 
		RULE_simpleTypeID = 16, RULE_compositeTypeID = 17, RULE_typeDescription = 18, 
		RULE_typeDescriptionArray = 19, RULE_typeDescriptionAttribute = 20, RULE_typeDescriptionClassMethod = 21, 
		RULE_typeDescriptionEnum = 22, RULE_typeDescriptionFunction = 23, RULE_typeDescriptionNestedFunction = 24, 
		RULE_typeDescriptionPointer = 25, RULE_typeDescriptionRange = 26, RULE_typeDescriptionReference = 27, 
		RULE_typeDescriptionStructUnionClass = 28, RULE_typeDescriptionXref = 29, 
		RULE_attributeBoundary = 30, RULE_attributePacked = 31, RULE_attributePointer = 32, 
		RULE_attributeSize = 33, RULE_attributeString = 34, RULE_attributeVector = 35, 
		RULE_classInheritanceInfo = 36, RULE_classInheritanceData = 37, RULE_classAccessibility = 38, 
		RULE_classMemberMethod = 39, RULE_classMemberMethodOverload = 40, RULE_classMemberMethodInfo = 41, 
		RULE_classMemberMethodModifier = 42, RULE_classMemberMethodStatic = 43, 
		RULE_classMemberMethodVirtualInfo = 44, RULE_classMemberStaticField = 45, 
		RULE_classMemberVirtualTable = 46, RULE_classMethodMangledSignature = 47, 
		RULE_enumMember = 48, RULE_structUnionType = 49, RULE_structUnionClassMember = 50, 
		RULE_structUnionClassMemberField = 51, RULE_classVirtualInfo = 52, RULE_xrefType = 53, 
		RULE_identifier = 54, RULE_letter = 55, RULE_boolean = 56, RULE_integer = 57, 
		RULE_number = 58, RULE_digit = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"symbol", "symbolType", "symbolTypeReferenceParameter", "symbolTypeGlobalFunction", 
			"symbolTypeLocalFunction", "symbolTypeGlobalVariable", "symbolTypeParameterOrFunctionPrototype", 
			"symbolTypeStackParameter", "symbolTypeRegisterVariable", "symbolTypeStaticFileVariable", 
			"symbolTypeTaggedTypedef", "symbolTypeTagged", "symbolTypeTypedef", "symbolTypeStaticLocalVariable", 
			"type", "typeID", "simpleTypeID", "compositeTypeID", "typeDescription", 
			"typeDescriptionArray", "typeDescriptionAttribute", "typeDescriptionClassMethod", 
			"typeDescriptionEnum", "typeDescriptionFunction", "typeDescriptionNestedFunction", 
			"typeDescriptionPointer", "typeDescriptionRange", "typeDescriptionReference", 
			"typeDescriptionStructUnionClass", "typeDescriptionXref", "attributeBoundary", 
			"attributePacked", "attributePointer", "attributeSize", "attributeString", 
			"attributeVector", "classInheritanceInfo", "classInheritanceData", "classAccessibility", 
			"classMemberMethod", "classMemberMethodOverload", "classMemberMethodInfo", 
			"classMemberMethodModifier", "classMemberMethodStatic", "classMemberMethodVirtualInfo", 
			"classMemberStaticField", "classMemberVirtualTable", "classMethodMangledSignature", 
			"enumMember", "structUnionType", "structUnionClassMember", "structUnionClassMemberField", 
			"classVirtualInfo", "xrefType", "identifier", "letter", "boolean", "integer", 
			"number", "digit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", 
			"'J'", "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", 
			"'T'", "'U'", "'V'", "'W'", "'X'", "'Y'", "'Z'", "'a'", "'b'", "'c'", 
			"'d'", "'e'", "'f'", "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", 
			"'n'", "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", 
			"'x'", "'y'", "'z'", "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", 
			"'7'", "'8'", "'9'", "'&'", "'<'", "'>'", "'*'", "'@'", "':'", "','", 
			"'.'", "'='", "'!'", "'#'", "'-'", "'('", "')'", "'%'", "'+'", "'?'", 
			"';'", "'/'", "' '", "'~'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "UppercaseA", "UppercaseB", "UppercaseC", "UppercaseD", "UppercaseE", 
			"UppercaseF", "UppercaseG", "UppercaseH", "UppercaseI", "UppercaseJ", 
			"UppercaseK", "UppercaseL", "UppercaseM", "UppercaseN", "UppercaseO", 
			"UppercaseP", "UppercaseQ", "UppercaseR", "UppercaseS", "UppercaseT", 
			"UppercaseU", "UppercaseV", "UppercaseW", "UppercaseX", "UppercaseY", 
			"UppercaseZ", "LowercaseA", "LowercaseB", "LowercaseC", "LowercaseD", 
			"LowercaseE", "LowercaseF", "LowercaseG", "LowercaseH", "LowercaseI", 
			"LowercaseJ", "LowercaseK", "LowercaseL", "LowercaseM", "LowercaseN", 
			"LowercaseO", "LowercaseP", "LowercaseQ", "LowercaseR", "LowercaseS", 
			"LowercaseT", "LowercaseU", "LowercaseV", "LowercaseW", "LowercaseX", 
			"LowercaseY", "LowercaseZ", "Number0", "Number1", "Number2", "Number3", 
			"Number4", "Number5", "Number6", "Number7", "Number8", "Number9", "Ampersand", 
			"AngleBracketLeft", "AngleBracketRight", "Asterisk", "At", "Colon", "Comma", 
			"Dot", "Equals", "Exclamation", "Hash", "Minus", "ParenthesisLeft", "ParenthesisRight", 
			"Percent", "Plus", "Question", "Semicolon", "Slash", "Space", "Tilde", 
			"Underscore"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StabsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StabsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode Colon() { return getToken(StabsParser.Colon, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public SymbolTypeContext symbolType() {
			return getRuleContext(SymbolTypeContext.class,0);
		}
		public SymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbol(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolContext symbol() throws RecognitionException {
		SymbolContext _localctx = new SymbolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_symbol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			identifier();
			setState(121);
			match(Colon);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 92363411751104L) != 0)) {
				{
				setState(122);
				symbolType();
				}
			}

			setState(125);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeContext extends ParserRuleContext {
		public SymbolTypeReferenceParameterContext symbolTypeReferenceParameter() {
			return getRuleContext(SymbolTypeReferenceParameterContext.class,0);
		}
		public SymbolTypeGlobalFunctionContext symbolTypeGlobalFunction() {
			return getRuleContext(SymbolTypeGlobalFunctionContext.class,0);
		}
		public SymbolTypeLocalFunctionContext symbolTypeLocalFunction() {
			return getRuleContext(SymbolTypeLocalFunctionContext.class,0);
		}
		public SymbolTypeGlobalVariableContext symbolTypeGlobalVariable() {
			return getRuleContext(SymbolTypeGlobalVariableContext.class,0);
		}
		public SymbolTypeParameterOrFunctionPrototypeContext symbolTypeParameterOrFunctionPrototype() {
			return getRuleContext(SymbolTypeParameterOrFunctionPrototypeContext.class,0);
		}
		public SymbolTypeStackParameterContext symbolTypeStackParameter() {
			return getRuleContext(SymbolTypeStackParameterContext.class,0);
		}
		public SymbolTypeRegisterVariableContext symbolTypeRegisterVariable() {
			return getRuleContext(SymbolTypeRegisterVariableContext.class,0);
		}
		public SymbolTypeStaticFileVariableContext symbolTypeStaticFileVariable() {
			return getRuleContext(SymbolTypeStaticFileVariableContext.class,0);
		}
		public SymbolTypeTaggedTypedefContext symbolTypeTaggedTypedef() {
			return getRuleContext(SymbolTypeTaggedTypedefContext.class,0);
		}
		public SymbolTypeTaggedContext symbolTypeTagged() {
			return getRuleContext(SymbolTypeTaggedContext.class,0);
		}
		public SymbolTypeTypedefContext symbolTypeTypedef() {
			return getRuleContext(SymbolTypeTypedefContext.class,0);
		}
		public SymbolTypeStaticLocalVariableContext symbolTypeStaticLocalVariable() {
			return getRuleContext(SymbolTypeStaticLocalVariableContext.class,0);
		}
		public SymbolTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeContext symbolType() throws RecognitionException {
		SymbolTypeContext _localctx = new SymbolTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_symbolType);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				symbolTypeReferenceParameter();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				symbolTypeGlobalFunction();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				symbolTypeLocalFunction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				symbolTypeGlobalVariable();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				symbolTypeParameterOrFunctionPrototype();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				symbolTypeStackParameter();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(133);
				symbolTypeRegisterVariable();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(134);
				symbolTypeStaticFileVariable();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(135);
				symbolTypeTaggedTypedef();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(136);
				symbolTypeTagged();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(137);
				symbolTypeTypedef();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(138);
				symbolTypeStaticLocalVariable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeReferenceParameterContext extends ParserRuleContext {
		public TerminalNode LowercaseA() { return getToken(StabsParser.LowercaseA, 0); }
		public SymbolTypeReferenceParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeReferenceParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeReferenceParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeReferenceParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeReferenceParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeReferenceParameterContext symbolTypeReferenceParameter() throws RecognitionException {
		SymbolTypeReferenceParameterContext _localctx = new SymbolTypeReferenceParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_symbolTypeReferenceParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(LowercaseA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeGlobalFunctionContext extends ParserRuleContext {
		public TerminalNode UppercaseF() { return getToken(StabsParser.UppercaseF, 0); }
		public SymbolTypeGlobalFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeGlobalFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeGlobalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeGlobalFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeGlobalFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeGlobalFunctionContext symbolTypeGlobalFunction() throws RecognitionException {
		SymbolTypeGlobalFunctionContext _localctx = new SymbolTypeGlobalFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbolTypeGlobalFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(UppercaseF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeLocalFunctionContext extends ParserRuleContext {
		public TerminalNode LowercaseF() { return getToken(StabsParser.LowercaseF, 0); }
		public SymbolTypeLocalFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeLocalFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeLocalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeLocalFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeLocalFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeLocalFunctionContext symbolTypeLocalFunction() throws RecognitionException {
		SymbolTypeLocalFunctionContext _localctx = new SymbolTypeLocalFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_symbolTypeLocalFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LowercaseF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeGlobalVariableContext extends ParserRuleContext {
		public TerminalNode UppercaseG() { return getToken(StabsParser.UppercaseG, 0); }
		public SymbolTypeGlobalVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeGlobalVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeGlobalVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeGlobalVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeGlobalVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeGlobalVariableContext symbolTypeGlobalVariable() throws RecognitionException {
		SymbolTypeGlobalVariableContext _localctx = new SymbolTypeGlobalVariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_symbolTypeGlobalVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(UppercaseG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeParameterOrFunctionPrototypeContext extends ParserRuleContext {
		public TerminalNode UppercaseP() { return getToken(StabsParser.UppercaseP, 0); }
		public SymbolTypeParameterOrFunctionPrototypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeParameterOrFunctionPrototype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeParameterOrFunctionPrototype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeParameterOrFunctionPrototype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeParameterOrFunctionPrototype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeParameterOrFunctionPrototypeContext symbolTypeParameterOrFunctionPrototype() throws RecognitionException {
		SymbolTypeParameterOrFunctionPrototypeContext _localctx = new SymbolTypeParameterOrFunctionPrototypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_symbolTypeParameterOrFunctionPrototype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(UppercaseP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolTypeStackParameterContext extends ParserRuleContext {
		public TerminalNode LowercaseP() { return getToken(StabsParser.LowercaseP, 0); }
		public SymbolTypeStackParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolTypeStackParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).enterSymbolTypeStackParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StabsParserListener ) ((StabsParserListener)listener).exitSymbolTypeStackParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StabsParserVisitor ) return ((StabsParserVisitor<? extends T>)visitor).visitSymbolTypeStackParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolTypeStackParameterContext symbolTypeStackParameter() throws RecognitionException {
		SymbolTypeStackParameterContext _localctx = new SymbolTypeStackParameterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_symbolTypeStackParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(LowercaseP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
